--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,14 +4,11 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: root
+      POSTGRES_USER: postgres
+    ports:
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data 
- 
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
  
 volumes:
   pgdata:
